Combined all components, fixed layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,7 @@ a {
     font-weight: 600;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-align: center;
     text-transform: uppercase;
     white-space: nowrap;
@@ -291,6 +291,7 @@ a {
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
 }
 
 .input-group .btn {
@@ -433,6 +434,10 @@ right: 5%;
     line-height: 1.3;
 }
 
+.quote__text {
+    font-size: 2rem;
+}
+
 .quote__text::before {
     content: open-quote;
 }
@@ -460,6 +465,11 @@ right: 5%;
     bottom: 10px;
 }
 
+@media screen and (min-width: 768px) {
+    .quote__text {
+        font-size: 2.5rem;
+    }
+ }
 @media screen and (min-width: 1024px) {
     .quote {
         font-size: 2rem;
@@ -601,7 +611,7 @@ right: 5%;
 /* Blocks */
 
 .block {
-    padding: 6rem 2rem;
+    padding: 4rem 2rem;
 }
 
 .block__header {
@@ -735,8 +745,9 @@ right: 5%;
 }
 
 .block-domain__prices {
+    color: var(--color-heading);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 6rem);
     font-size: 2rem;
     font-weight: 600;
